# admin

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  [작업계획서] 카지노-베팅 통합 관리자 패널.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 69790b4a3500_restructure_user_model_referral_tree.py  7656a57c4653_initial_schema.py  a1b2c3d4e5f6_add_composite_indexes.py  b2c3d4e5f6g7_add_quality_composite_indexes.py  c3d4e5f6g7h8_add_agent_commission_rates.py  d4e5f6g7h8i9_crypto_payment_conversion.py  e5f6g7h8i9j0_decimal_and_fk_fixes.py  f0708e4f8bbf_user_detail_enhancement.py  f6g7h8i9j0k1_p0_features_vip_limits_promo_salary.py  g7h8i9j0k1l2_p1_notifications_fraud.py  h8i9j0k1l2m3_p2_ip_memo.py  i9j0k1l2m3n4_p3_kyc_documents.py  j0k1l2m3n4o5_add_losing_rate_commission_toggle.py  k1l2m3n4o5p6_commission_type_and_user_losing_rate.py  l2m3n4o5p6q7_promotion_reward_features.py  m3n4o5p6q7r8_mlm_commission_ledger_refactor.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/connectors/: __init__.py  base.py  casino_connector.py  holdem_connector.py  slot_connector.py  sports_connector.py
backend/app/middleware/: audit.py  rate_limit.py  (+1 more)
backend/scripts/: seed.py  test_agents.py  test_auth.py  test_commissions.py  test_connectors.py  test_dashboard_reports.py  test_games.py  test_partner.py  test_phase10.py  test_security.py  test_settlements.py  test_users_finance.py
backend/tests/: test_health.py
(+316 files in other folders)
