[project]
name = "admin-panel-backend"
version = "0.1.0"
description = "통합 게임 관리자 패널 백엔드"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "redis>=5.2.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "loguru>=0.7.0",
    "openpyxl>=3.1.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20", "RUF"]
ignore = [
    "UP007",   # X | None — not yet standard in team
    "B008",    # FastAPI Depends()/Query()/Body() in default args is idiomatic
    "UP017",   # datetime.timezone.utc → datetime.UTC — cosmetic, low priority
    "E501",    # line-too-long — handled by black
    "E712",    # SQLAlchemy/SQLModel requires `== True` for column comparisons
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]
"alembic/*" = ["T201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
